# SyntheticMemories

./: IDENTITY.md  MEMORY.md  README.md  SOUL.md  TOOLS.md
.clawdhub/: lock.json
.github/workflows/: ci.yml
CI_RUNS/: COMPLETION_REPORT.md  last_run.md  monorepo_complete.md  monorepo_setup.md
SyntheticMemories/: AGENTS.md  BUG-REPORT.md  DESIGN.md  HEARTBEAT.md  webchat-avatar-fix-report.md
SyntheticMemories/memory/: 2026-02-01.md  rover-upgrade-options.md
SyntheticMemories/memory/backups/: MEMORY.md.bak-20260202-100126
SyntheticMemories/skills/galaxyrvr/: .dockerignore  .env  .env.example  PROJECT_SUMMARY.md  calibrate.py  keyboard_control.py  map_viewer.py  monitor.py  requirements.txt  start_battery_monitor.sh  status.py  (+2 more)
docs/: CONTRIBUTING.md  DEPLOY.md
memory/: 2026-01-31.md  2026-02-01.md  galaxyrvr-discovery.md  galaxyrvr-working-control.md  heartbeat-state.json
memory-agent/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  INTEGRATION_REPORT.md  LICENSE  MVP.md  PRICING.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
memory-agent/.github/workflows/: ci.yml
memory-agent/data/: .gitkeep
memory-agent/docs/: CLI_USAGE.md  USAGE.md
memory-agent/models/: .gitkeep
memory-agent/scripts/: download_models.py  setup.py
memory-agent/src/: main.py
memory-agent/src/memory_agent/: __init__.py  cli.py  config.py  embeddings.py  llm.py  memory_manager.py  models.py  vector_store.py
memory-agent/tests/: test_cli.py  test_config.py  test_embeddings.py  test_memory_manager.py
scripts/: bootstrap.sh  cleanup-media.sh  docker-security-scan.sh  package.sh
skills/advanced-memory/: .gitignore  Dockerfile  PLAN.md  QUICKSTART.md  README.md  SKILL.md  VALIDATION_REPORT.md  autosave-agent.js  config.yml  curation_preview.md  curation_preview.patch  docker-compose.yml  requirements.txt  test_service.py
skills/galaxyrvr/: BLE_BEACONS.md  CALIBRATION.md  DOCKER.md  Dockerfile  MAPPING.md  MONITORING.md  QUICK_REF.md  README.md  WEB_QUICKSTART.md  autonomous_explorer.py  battery_alert.py  charge_monitor.py  docker-compose.yml  explore_diagnostic.py  mapping.py  requirements-web.txt  rover_control.py  start_dashboard.sh  test_all_systems.sh  web_dashboard.py  wifi_monitor.py
skills/health-check/: SKILL.md
(+16 files in other folders)
